<resources>
    <string name="app_name">MVVM_HKT</string>
    <string name="press_again_to_exit_the_program">再按一次退出程序</string>
    <string name="ex_network_timeout">网络连接超时，请检查您的网络状态，稍后重试！</string>
    <string name="ex_network_exception">网络连接异常，请检查您的网络状态，稍后重试！</string>
    <string name="ex_service_exception">未知服务！</string>
    <string name="ex_parse_error">解析错误</string>
    <string name="ex_certificate_verification_failed">证书验证失败</string>
    <string name="ex_unknown_error">未知错误</string>
    <string name="ex_default_network_exception">网络异常</string>
    <string name="change_language">切换语言</string>
    <string name="login_please_phone_hint">请输入手机号</string>
    <string name="login_please_email_hint">请输入邮箱</string>
    <string name="login_please_set_password">请设置登录密码</string>
    <string name="login_no_account">没有账号？</string>
    <string name="login_to_register">立即注册</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="login_language">语言</string>
    <string name="mine_system_settings">系统设置</string>
    <string name="main_mine">我的</string>
    <string name="login_password_edt_hint">请输入登录密码</string>
    <string name="public_next">下一步</string>
    <string name="register_same_password">密码确认一致</string>
    <string name="register_not_same_password">密码确认不一致</string>
    <string name="register_password_tip">密码须同时包含字母和数字，长度为6-20位</string>
    <string name="register_enter_password_again">再次输入登录密码</string>
    <string name="register_invitation_code_hint">请输入邀请码</string>
    <string name="register_invitaion_unavailable">邀请码不可用</string>
    <string name="register_already_account">已有账号？</string>
    <string name="register_to_login">去登录</string>
    <string name="mine_login_password">登录密码</string>
    <string name="public_tip">提示</string>
    <string name="public_confirm_quit">是否确定退出</string>
    <string name="public_confirm">确定</string>
    <string name="public_cancel">取消</string>
    <string name="setting_switch_language">切换语言</string>
    <string name="setting_version_code">版本号</string>
    <string name="setting_use_agreement">使用协议</string>
    <string name="setting_sign_out">退出登录</string>
    <string name="home_exchange_completed">已完成</string>
    <string name="recharge">充币</string>
    <string name="withdrawal">提币</string>
    <string name="new_password">新密码</string>
    <string name="hint_password_rules">6-20位字符，不可以是纯数字或者符号</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="hint_password_rules_tip">6-20位数字+字母的组合，不可以是纯数字或者符号</string>
    <string name="hint_confirm_new_password">请再次输入新密码</string>
    <string name="hint_confirm_new_password_tip">密码确认一致</string>
    <string name="hint_confirm_new_password_tip_not">密码确认不一致</string>
    <string name="confirm_reset_password">确定重置密码</string>
    <string name="success_reset_password">密码重置成功</string>
    <string name="withdrawal_currency_address">提币地址</string>
    <string name="copy_invitation_code_succeeded">复制邀请码成功</string>
    <string name="copy_invitation_link_succeeded">复制邀请链接成功</string>
    <string name="picture_saved_successfully">图片保存图库成功</string>
    <string name="my_invitation_code_splicing">我的邀请码：%s</string>
    <string name="my_invitation_link">我的邀请链接</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="generate_invitation_poster">生成邀请海报</string>
    <string name="title_my_invitation">我的邀请</string>
    <string name="select_currency">选择币种</string>
    <string name="title_select_currency">选择币种</string>
    <string name="chain_name">链名称</string>
    <string name="withdrawal_address">提现地址</string>
    <string name="hint_withdrawal_address">请输入或者长按粘贴钱包地址</string>
    <string name="hint_home_exchange_count">最小提币数量0</string>
    <string name="quantity_received">到账数量</string>
    <string name="hint_home_exchange_count_splicing">最小提币数量%s</string>
    <string name="confirm_payment">确认支付</string>
    <string name="input_withdrawal_address">请输入提币地址</string>
    <string name="input_withdrawal_count">请输入提币数量</string>
    <string name="insufficient_available_balance">可用余额不足</string>
    <string name="to_set">去设定</string>
    <string name="the_code_scanning_function_cannot_be_used_without_authorization">未授权权限，扫码功能不能使用</string>
    <string name="to_recharge">去充值 >></string>
    <string name="confirm_exchange">确认兑换</string>
    <string name="title_flash_cash">闪兑</string>
    <string name="exchange_success">兑换成功</string>
    <string name="confirm">确认</string>
    <string name="title_update_password">修改密码</string>
    <string name="account">账户</string>
    <string name="usable_">可用：</string>
    <string name="frozen_">冻结：</string>
    <string name="my_assets_recharge">充值</string>
    <string name="my_assets_withdrawal">提现</string>
    <string name="title_add_address">添加地址</string>
    <string name="confirm_add_address">确认添加</string>
    <string name="input_or_paste_the_address">请输入或者粘贴地址</string>
    <string name="address_name">地址名称</string>
    <string name="input_the_address_name">请输入地址名称</string>
    <string name="add_success">添加成功</string>
    <string name="zxing_qr_code_not_found">未发现二维码</string>
    <string name="zxing_flash_not_found">暂时无法开启闪光灯</string>
    <string name="zxing_flash_on">轻触开启闪光灯</string>
    <string name="zxing_flash_off">轻触关闭闪光灯</string>
    <string name="zxing_qr_code_hint">对准二维码，即可自动扫描至地址栏</string>
    <string name="zxing_scan">扫一扫</string>
    <string name="zxing_photo">照片</string>
    <string name="zxing_scanning">正在扫描...</string>
    <string name="hint_delete_withdrawal_address">是否确认删除提币地址?</string>
    <string name="hint_delete_success">删除成功</string>
    <string name="transfer_suspended_in_current_currency">当前币种暂停转账</string>
    <string name="suspension_of_flash">暂停闪兑</string>
    <string name="no_address">暂无地址</string>
    <string name="copy_address_succeeded">复制地址成功</string>
    <string name="copy_address">复制地址</string>
    <string name="failed_to_save_qr_code_without_authorization">未授权权限保存二维码失败</string>
    <string name="save_qr_code">保存二维码</string>
    <string name="recharge_address">充币地址</string>
    <string name="reminder">温馨提示</string>
    <string name="login_successful">登录成功</string>
    <string name="main_bottom_tab_0">首页</string>
    <string name="main_bottom_tab_1">交易</string>
    <string name="main_bottom_tab_2">交易</string>
    <string name="main_bottom_tab_3">消息</string>
    <string name="dialog_save_to_phone">保存到手机</string>
    <string name="dialog_poster_qr_code_hint">(长按识别二维码)</string>
    <string name="dialog_security_verification">安全验证</string>
    <string name="dialog_password_error">密码错误</string>
    <string name="dialog_password_not_null">密码不能为空</string>
    <string name="dialog_upgrade_now">立即升级</string>
    <string name="dialog_new_version_features">新版本特性：</string>
    <string name="title_information">资讯</string>
    <string name="new_latest_price">最新价</string>
    <string name="switch_language">选择语言</string>
    <string name="save_bitmap_success">保存成功</string>
    <string name="save_bitmap_fail">保存失败</string>
    <string name="developing">功能开发中，敬请期待~</string>
    <string name="dialog_entrust_screen_currency">币种</string>
    <string name="no_data_available">还没有数据哦</string>
    <string name="not_yet_open">暂未开放</string>
    <string name="deposit_suspended">当前币种暂停充币</string>
    <string name="public_copy">复制</string>
    <string name="public_copy_succeeded">复制成功</string>
    <string name="info_exit">安全退出</string>
    <string name="info_information">资料</string>
    <string name="info_modify_avatar">修改头像</string>
    <string name="select_sex">选择性别</string>
    <string name="selcct_set_avatar">设置头像</string>
    <string name="select_photo">从相册选择</string>
    <string name="select_camera">拍照</string>
    <string name="set_security">安全设置</string>
    <string name="about_us">关于我们</string>
    <string name="about_version">当前版本：</string>
    <string name="about_update">检测更新</string>
    <string name="about_agreement">用户协议</string>
    <string name="setting_authentication">身份验证</string>
    <string name="public_close">关闭</string>
    <string name="enter_new_password">输入新密码</string>
    <string name="repeat_new_password">重复新密码</string>
    <string name="home_asset_conversion">资产折合</string>
    <string name="home_assets_details">资产详情</string>
    <string name="invitation_share_application">分享应用</string>
    <string name="invitation_share_qr">分享二维码</string>
    <string name="invitation_share_link">分享链接</string>
    <string name="recharge_apply">申请充币</string>
    <string name="recharge_share_address">分享地址</string>
    <string name="recharge_tip">充币提示</string>
    <string name="recharge_num">充值数量</string>
    <string name="withdraw_apply">申请提币</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="withdraw_min">最小提币：</string>
    <string name="withdraw_fee">手续费</string>
    <string name="withdraw_confirm">提交申请</string>
    <string name="withdraw_details">提币详情</string>
    <string name="withdraw_time">提币时间</string>
    <string name="flash_exchange_record">兑换记录</string>
    <string name="arrive_num_usdt">到账数量 (USDT)</string>
    <string name="flash_current_price">当前价格</string>
    <string name="dialog_new">新版本特性：</string>
    <string name="exchange_quantity">兑换数量</string>
    <string name="home_exchange_all">全部</string>
    <string name="home_exchange_count">数量</string>
    <string name="home_exchange_type">类型</string>
    <string name="home_exchange_time">时间</string>
    <string name="frozen">冻结</string>
    <string name="home_exchange">闪兑</string>
    <string name="hint_please_enter_the_exchange_quantity">请输入兑换数量</string>
    <string name="title_recharge_record">充币记录</string>
    <string name="title_withdrawal_record">提币记录</string>
    <string name="login_with_mobile">手机登录</string>
    <string name="login_with_email">邮箱登录</string>
    <string name="verification_code">验证码</string>
    <string name="register">注册</string>
    <string name="register_invitation_code">邀请码（必填）</string>
    <string name="register_agreement_1">注册即代表你同意</string>
    <string name="register_agreement_2">《隐私条款》</string>
    <string name="register_agreement_3">和</string>
    <string name="register_agreement_4">《免责声明》</string>
    <string name="register_with_email">邮箱注册</string>
    <string name="register_with_mobile">手机注册</string>
    <string name="code_reacquire">重新获取</string>
    <string name="code_again">再次获取</string>
    <string name="web_loading_error">加载错误，点击重试</string>
    <string name="please_enter_the_code">请输入验证码</string>
    <string name="verify_password_format">密码格式不正确</string>
    <string name="select_agreenment">请阅读并同意条款声明</string>
    <string name="send_message_tip">短信发送成功，请注意查收</string>
    <string name="register_success">注册成功</string>
    <string name="Inconsistent_passwords">密码不一致</string>
    <string name="mobile_phone_recovery">手机找回</string>
    <string name="retrieve_email">邮箱找回</string>
    <string name="title_area">国家/地区</string>
    <string name="enter_country_or_region">请输入国家/地区</string>
    <string name="current_newest_version">当前是最新版本</string>
    <string name="invite_friends">邀请好友</string>
    <string name="my_team">我的团队</string>
    <string name="team_direct_count">直推人数：%s 人</string>
    <string name="total_team_performance">团队总业绩</string>
    <string name="total_number_of_team">团队总人数</string>
    <string name="team_level">级别</string>
    <string name="team_performance">团队业绩</string>
    <string name="mine_profit_breakdown">盈亏明细</string>
    <string name="home_open_account">交易所开户</string>
    <string name="home_bind_api">绑定API</string>
    <string name="home_news">行业资讯</string>
    <string name="home_mainstream_currency">主流币</string>
    <string name="home_market">市场</string>
    <string name="home_Gainers">涨幅榜</string>
    <string name="home_latest_news">最新资讯</string>
    <string name="home_bind">绑定</string>
    <string name="home_login_tip">登录即可开启专业策略交易</string>
    <string name="home_bind_tip">绑定交易所API开启量化交易</string>
</resources>